Fixed the disalignment of the nice menu at top

--- a/themes/research7/style.css
+++ b/themes/research7/style.css
@@ -1075,7 +1075,7 @@ a.db_edit_link:hover {
 
 div.content ul {
   margin-right: 3em;
-  margin-left: 1em;
+  margin-left: 0em;
 }
 
 #block-locale-language {
